Fix error-prone MissingOverride
Note that LexScan.java is produced with MissingOverride. I fixed it, and when we bootstrap with 1.8.0, we should be able to check the generated classes.